front page logo visibility fixed

--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,13 @@
 
 body, html {
     height: 100%;
-    background-color:rgb(200,83,2);
-    /* background-color: rgb(200,83,2); */
+    /* background-color:rgb(200,83,2); */
+    background-color:  rgb(185,126,1);
     
     background-image: url(../public/images/logoYellow.jpeg);
-    background-size: 30%;
     background-position: center;
+    background-size: 45%;
+    
    background-repeat: no-repeat;
    background-image: radial-gradient();
   
@@ -14,8 +15,9 @@ body, html {
    
     
 }
+
 .radial-gradient {
-  background-image: radial-gradient(transparent 0%, rgb(185,126,1) 35%, rgb(200,83,2)50%);
+  background-image: radial-gradient(transparent 30%, rgb(200,83,2) 50%, rgb(200,83,2)50%);
   height: 100%;
 } 
 .container {
@@ -110,6 +112,8 @@ nav ul li a:hover {
 
 .about-box {
   width: 300px;
+  height: 600px;
+
   /* border: 15px double  rgb(200,83,2); */
   background-color: #ffffff 25%;
   /* opacity: 50%; */
